--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
     - corrupted.pdf
     - demo-landscape.pdf
     - demo-link.pdf
+    - assets/pdf/file-example.pdf
 
   # fonts:
   #   - family: Schyler
