--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - corrupted.pdf
-    - demo-landscape.pdf
-    - demo-link.pdf
+    - assets/corrupted.pdf
+    - assets/demo-landscape.pdf
+    - assets/demo-link.pdf
     - assets/pdf/file-example.pdf
 
   # fonts:
